# desktop

./: .gitignore  CLAUDE.md  LICENSE  README.md  package.json
.github/: CODEOWNERS
src/: api.js  app.js  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tray/: tray.js
